# astrosim

./: CMakeLists.txt  README.md
command/: CMakeLists.txt  Command.cpp  Command.h
game/: CMakeLists.txt  Game.cpp  Game.h
main/: CMakeLists.txt  main.cpp
model/: AI.cpp  AI.h  AbstractActor.cpp  AbstractActor.h  Asteroid.cpp  Asteroid.h  CMakeLists.txt  Command.cpp  Command.h  Environment.cpp  Environment.h  IActor.h  ICommandGenerator.h  IShip.h  Model.cpp  Model.h  Ship.cpp  Ship.h  SimpleCommandGenerator.cpp  SimpleCommandGenerator.h
utils/: CMakeLists.txt  Dummy.cpp  Event.h  IObservable.h  IObserver.h  Pos2d.cpp  Pos2d.h
view/: CMakeLists.txt  IDrawable.h  ShipDrawable.cpp  ShipDrawable.h  View.cpp  View.h
